Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -145,7 +145,7 @@
     "def grad_desc(X, y, max_iterations, alpha, initial_weights=None):\n",
     "    \"\"\"Be sure to set default behavior for the initial_weights parameter.\"\"\"\n",
     "    #Create a for loop of iterations\n",
-    "    for i in range(max_iteration)\n",
+    "    for i in range(max_iterations):\n",
     "        #Generate predictions using the current feature weights\n",
     "        #Calculate an error vector based on these initial predictions and the correct labels\n",
     "        #Calculate the gradient \n",
