--- a/index.ipynb
+++ b/index.ipynb
@@ -146,7 +146,7 @@
     "    \"\"\"Be sure to set default behavior for the initial_weights parameter.\"\"\"\n",
     "    #Create a for loop of iterations\n",
     "    for i in range(max_iterations):\n",
-    "        y_pred=predict_y(sigmoid(X), y\n",
+    "        y_pred=predict_y(sigmoid(X), y)\n",
     "        #Generate predictions using the current feature weights\n",
     "        #Calculate an error vector based on these initial predictions and the correct labels\n",
     "        #Calculate the gradient \n",
