Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -144,7 +144,10 @@
     "# Your code here\n",
     "def grad_desc(X, y, max_iterations, alpha, initial_weights=None):\n",
     "    \"\"\"Be sure to set default behavior for the initial_weights parameter.\"\"\"\n",
-    "    \n",
+    "    if initial_weights == None:\n",
+    "        initial_weights = np.ones((X.shape[1],1)).flatten()\n",
+    "    weights_col= pd.DataFrame(initial_weights)\n",
+    "    weights = initial_weights\n",
     "    #Create a for loop of iterations\n",
     "    for i in range(max_iterations):\n",
     "        y_pred=predict_y(sigmoid(X), y)\n",
