Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -150,7 +150,7 @@
     "    weights = initial_weights\n",
     "    #Create a for loop of iterations\n",
     "    for i in range(max_iterations):\n",
-    "        y_pred=sigmoid(X), y)\n",
+    "        predictions = sigmoid(np.dot(X,weights))\n",
     "        #Generate predictions using the current feature weights\n",
     "        #Calculate an error vector based on these initial predictions and the correct labels\n",
     "        #Calculate the gradient \n",
