Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -152,8 +152,9 @@
     "    for i in range(max_iterations):\n",
     "        predictions = sigmoid(np.dot(X,weights))\n",
     "        #Generate predictions using the current feature weights\n",
-    "        error=\n",
+    "        error=predictions-y\n",
     "        #Calculate an error vector based on these initial predictions and the correct labels\n",
+    "        \n",
     "        #Calculate the gradient \n",
     "        #As we saw in the previous lab, calculating the gradient is often the most difficult task.\n",
     "        #Here, your are provided with the closed form solution for the gradient of the log-loss function derived from MLE\n",
