Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -152,7 +152,7 @@
     "    for i in range(max_iterations):\n",
     "        predictions = sigmoid(np.dot(X,weights))\n",
     "        #Generate predictions using the current feature weights\n",
-    "        error=predictions-y\n",
+    "        error_vector = y - predictions\n",
     "        #Calculate an error vector based on these initial predictions and the correct labels\n",
     "        \n",
     "        #Calculate the gradient \n",
