--- a/index.ipynb
+++ b/index.ipynb
@@ -159,8 +159,12 @@
     "        #Here, your are provided with the closed form solution for the gradient of the log-loss function derived from MLE\n",
     "        #For more details on the derivation, see the additional resources section below.\n",
     "        gradient = np.dot(X.transpose(),error_vector) \n",
-    "        #Update the weight vector take a step of alpha in direction of gradient \n",
-    "    #Return finalized Weights"
+    "        #Update the weight vector take a step of alpha in direction of gradient\n",
+    "        weights += alpha * gradient\n",
+    "        weights_col = pd.concat([weights_col, pd.DataFrame(weights)], axis=1)\n",
+    "    #Return finalized Weights\n",
+    "    \n",
+    "    "
    ]
   },
   {
