Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -163,7 +163,7 @@
     "        weights += alpha * gradient\n",
     "        weights_col = pd.concat([weights_col, pd.DataFrame(weights)], axis=1)\n",
     "    #Return finalized Weights\n",
-    "    \n",
+    "    return weights, weights_col\n",
     "    "
    ]
   },
