Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -357,7 +357,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "weight_col.columns = np.arange(len(weight_col.columns))\n"
+   ]
   },
   {
    "cell_type": "markdown",
