--- a/index.ipynb
+++ b/index.ipynb
@@ -354,12 +354,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "weight_col.columns = np.arange(len(weight_col.columns))\n"
+    "weight_col.columns = np.arange(len(weight_col.columns))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
