Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -364,7 +364,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -402,11 +404,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/envs/learn-env/lib/python3.6/site-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
+      "  FutureWarning)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(C=1e+16, class_weight=None, dual=False,\n",
+       "          fit_intercept=False, intercept_scaling=1, max_iter=100,\n",
+       "          multi_class='warn', n_jobs=None, penalty='l2', random_state=2,\n",
+       "          solver='warn', tol=0.0001, verbose=0, warm_start=False)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "logreg = LogisticRegression(fit_intercept=False, C=1e16, random_state=2)\n",
+    "logreg.fit(X, y)"
    ]
   },
   {
