Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -447,11 +447,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sci-kit learn's weights: [ 0.81221467 -1.61293693  2.6179496  -1.96887354 -1.50936862  0.05688225\n",
+      "  1.1521945   4.42098698 -0.83027951 -2.74686109  1.45580368 -3.115599\n",
+      " -2.19130405]\n",
+      "Our manual regression weights: [ 0.7802778  -1.601665    2.61772008 -1.95194946 -1.39350985  0.05818755\n",
+      "  1.15984037  4.36925075 -0.83136019 -2.75080939  1.45778904 -3.10796257\n",
+      " -2.19158082]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "print(\"Sci-kit learn's weights:\", logreg.coef_[0])\n",
+    "print(\"Our manual regression weights:\", weights)"
    ]
   },
   {
