--- a/index.ipynb
+++ b/index.ipynb
@@ -483,7 +483,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
+    "\n",
+    "def grad_desc(X, y, max_iterations, alpha, initial_weights=None):\n",
+    "    \"\"\"Be sure to set default behavior for the initial_weights parameter.\"\"\"\n",
+    "    if initial_weights == None:\n",
+    "        initial_weights = np.ones((X.shape[1],1)).flatten()\n",
+    "    weights = initial_weights\n",
+    "    training_errors = []\n",
+    "    #Create a for loop of iterations\n",
+    "    for iteration in range(max_iterations):\n",
+    "        #Generate predictions using the current feature weights\n",
+    "        predictions = sigmoid(np.dot(X,weights))\n",
+    "        #Calculate an error vector based on these initial predictions and the correct labels\n",
+    "        error_vector = y - predictions\n",
+    "        #Calculate the gradient (transpose of X times error is the gradient)\n",
+    "        gradient = np.dot(X.transpose(),error_vector)\n",
+    "        #Update the weight vector take a step of alpha in direction of gradient \n",
+    "        weights += alpha * gradient\n",
+    "        training_errors.append(np.abs(error_vector).sum())\n",
+    "    #Return finalized Weights\n",
+    "    return weights, training_errors\n",
+    "max_iterations = 50000\n",
+    "weights, training_errors = grad_desc(X, y, max_iterations, 0.001)\n",
+    "print('Coefficient weights:\\n', weights)\n",
+    "plt.plot(range(max_iterations), training_errors)"
    ]
   },
   {
